--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,43 @@
 * {
   margin: 0;
   padding: 0;
-  max-height : 100vh ;
+  max-height: 100vh;
   background: #bd5353;
-
+  font-weight: 300;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .top_bar {
-  padding-bottom:5px ;
+  padding-bottom: 5px;
 }
- h1 {
-    padding-bottom:15px ;
-
+h1 {
+  padding-bottom: 15px;
 }
 hr {
- background: #c44040 ;
- width: 100%;
+  background: #c44040;
+  width: 100%;
 }
 
 
-.top_bar top_line {
-  color: black;
+.pomo_container {
+  width: 580px;
 }
 
 .pomodoro_app {
-     display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
 }
 
 .pomo_Count {
- background-color: rgb(0,0,0); 
-
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 40px 40px 40px;
+  border-radius: 6px;
+  margin-bottom: 20px;
+  width: 100%;
+  
 }
 
 .pomodoro_type {
@@ -41,11 +45,13 @@ hr {
 }
 
 ul {
-  display: flex;
   list-style-type: none;
+  display: inline-flex;
+  -webkit-box-pack: center;
   justify-content: center;
-  margin: 0;
-  padding: 0;
+  -webkit-box-align: center;
+  align-items: center;
+  
 }
 
 li {
@@ -58,10 +64,30 @@ li {
   color: white;
 }
 
-button {
-  border: none;
-  padding: 15px 60px 15px 60px ;
-  background-color: white;
-  font-size: 30px;
-  cursor: pointer;
+
+.btn {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+
 }
+
+
+
+button {
+ cursor: pointer;
+    border: none;
+    margin: 20px 0px 0px;
+    padding: 0px 12px;
+    border-radius: 4px;
+    box-shadow: rgb(235, 235, 235) 0px 6px 0px;
+    font-family: ArialRounded;
+    font-size: 22px;
+    height: 55px;
+    color: rgb(186, 73, 73);
+    font-weight: bold;
+    width: 200px;
+    background-color: white;
+    transition: color 0.5s ease-in-out 0s;
+}
+
