--- a/src/App.css
+++ b/src/App.css
@@ -87,16 +87,7 @@ font-size: 20px;
 }
 
 
-.btn {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-
-}
-
-
-
-button {
+.startUpBtn {
  cursor: pointer;
     border: none;
     margin: 20px 0px 0px;
@@ -113,3 +104,10 @@ button {
     transition: color 0.5s ease-in-out 0s;
 }
 
+.uil-step-forward{
+  display: flex;
+width: 50px;
+height: 50px;
+
+
+}
