added some code still stuck tho

--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,39 @@ font-size: 20px;
 
 }
 
+
+.ActiveListBtn {
+    border: none;
+    margin: 0px;
+    border-radius: 4px;
+    font-family: ArialRounded;
+    font-size: 16px;
+    padding: 2px 12px;
+    height: 28px;
+    cursor: pointer;
+    background: none rgba(0, 0, 0, 0.15);
+    box-shadow: none;
+    color: white;
+    opacity: 1;
+    font-weight: bold;
+}
+
+.InactivelistBtn {
+      border: none;
+    color: white;
+    margin: 0px;
+    border-radius: 4px;
+    font-family: ArialRounded;
+    font-size: 16px;
+    padding: 2px 12px;
+    height: 28px;
+    cursor: pointer;
+    background: none;
+    box-shadow: none;
+    font-weight: 400;
+}
+
+
 .timer_countdown {
   font-size: 80px;
   color: white;
